# libvirt-sfvm

./: meson.build  meson_options.txt
docs/: drivers.rst  meson.build
include/libvirt/: libvirt-host.h  virterror.h
po/: POTFILES
src/: driver-hypervisor.h  libvirt-host.c  libvirt.c  libvirt_public.syms  meson.build  remote_protocol-structs
src/ch/: ch_conf.c  ch_conf.h  ch_driver.c  ch_monitor.c  ch_process.c
src/conf/: domain_conf.c  domain_conf.h
src/qemu/: qemu_command.c
src/remote/: remote_daemon.c  remote_driver.c  remote_protocol.x
src/sfvm/: meson.build  sfvm_conf.c  sfvm_conf.h  sfvm_domain.c  sfvm_domain.h  sfvm_driver.c  sfvm_driver.h  sfvm_monitor.c  sfvm_process.c  sfvm_process.h  virtsfvmd.service.in
src/util/: virerror.c
tools/: virsh-host.c  virsh.c
